using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class PlayerAnimatorParamentsNames
{
    public const string JUMP = "Jump";
    public const string RUN = "Run";
    public const string SLIDE = "Slide";
    public const string FALL = "Fall";
}
